// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab renders active styling 1`] = `
<div
  className="c-tab__list__item is-active "
/>
`;

exports[`Tab renders default styling 1`] = `
<div
  className="c-tab__list__item "
/>
`;

exports[`Tab renders disabled styling 1`] = `
<div
  className="c-tab__list__item is-disabled "
  disabled={true}
/>
`;

exports[`Tab renders focused styling 1`] = `
<div
  className="c-tab__list__item is-focused "
/>
`;

exports[`Tab renders hovered styling 1`] = `
<div
  className="c-tab__list__item is-hovered "
/>
`;

exports[`Tab renders selected styling 1`] = `
<div
  className="c-tab__list__item is-selected "
  selected={true}
/>
`;
